2010-05-25  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (md5_digest): Remove no longer necessary conversions
	between str and buffer.  Fold into the only caller.
	* src/bridge.py (RPMObject, KojiClient): Split from SignRpmRequestType.
	(SignRpmRequestType): Use KojiClient.
	(SignRpmRequestType.forward_reply_payload): Don't keep tmp_file open
	while adding signature to Koji.
	(SignRpmRequestType.close): Call superclass close() method.  Clear
	self.__request_fields for added safety.

	* src/bridge.py (urlgrabber_open): Split from
	SignRpmRequestType.forward_request_payload.
	(SignRpmRequestType.forward_request_payload): Use urlgrabber_open.

	* src/double_tls.py (OuterBuffer.send_outer_eof): New method.
	* src/bridge.py (handle_connection): Make sure we don't send a RST to
	the client before it can handle all reply data.

	* src/bridge.py (InvalidReplyError): New class.
	(handle_connection): Raise InvalidReplyError, not InvalidRequestError.
	(bridge_one_request): Handle InvalidReplyError.

	* src/utils.py (readable_fields): New function.
	* src/bridge.py (handle_connection)
	* src/server.py (ServersConnection.read_request): Use
	utils.readable_fields.

	* src/utils.py (copy_data): New function.
	* src/bridge.py (copy_file_data): Rename from copy_data.  Use
	utils.copy_data.  All callers changed.

	* src/utils.py (write_new_file): Rename parameter.

2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* src/double_tls.py (OuterBuffer.read, OuterBuffer.write)
	(OuterBuffer.pending_inner_packets, OuterBuffer.add_outer_data): Add
	debug output.

	* src/double_tls.py (_SplittingBuffer._check_shutdown): Fix variable
	name, don't shut down self.__outer_dst over and over.

	* src/double_tls.py (_ForwardingBuffer._handle_errors)
	(_ForwardingBuffer._receive): Comment on possible combinations of
	PR_POLL_IN with other flags.
	(_CombiningBuffer._handle_errors)
	(_CombiningBuffer.__receive_inner)
	(_CombiningBuffer.__receive_outer)